# mp-red-complex

./: .editorconfig  .gitignore  AGENTS.md  CMakeLists.txt  QWEN.md  README.md  vcpkg.json
src/: CMakeLists.txt
src/ApplicationLayer/: CMakeLists.txt  i_items_placement_service.h  inventories_save_manager.cpp  inventories_save_manager.h  inventories_service.cpp  inventories_service.h  inventory_loader.cpp  inventory_loader.h  items_placement_service.cpp  items_placement_service.h  items_placement_store.h  items_save_manager.cpp  items_save_manager.h
src/ApplicationLayer/character/: character_item_handler.cpp  character_item_handler.h
src/ApplicationLayer/equipment/: equipment_item_handler.cpp  equipment_item_handler.h  equipment_save_handler.cpp  equipment_save_handler.h  equipment_service.cpp  equipment_service.h  equipment_store_impl.cpp  equipment_store_impl.h  equipments_service.cpp  equipments_service.h  i_equipment_repository.h
src/ApplicationLayer/inventory/: inventories_controller.cpp  inventories_controller.h  inventories_service.cpp  inventories_service.h  inventory_item_handler.cpp  inventory_item_handler.h  inventory_item_mime_data.cpp  inventory_item_mime_data.h  inventory_loader_impl.cpp  inventory_loader_impl.h  inventory_save_handler.cpp  inventory_save_handler.h  inventory_service.cpp  inventory_service.h  inventory_store_impl.cpp  inventory_store_impl.h
src/ApplicationLayer/items/: item_mime_data.cpp  item_mime_data.h  items_service.cpp  items_service.h
src/ApplicationLayer/maps/: map_service.cpp  map_service.h
src/ApplicationLayer/materials/: material_mime_data.cpp  material_mime_data.h  materials_service.cpp  materials_service.h
src/ApplicationLayer/repositories/: i_inventory_repository.h  i_item_repository.h
src/ApplicationLayer/shaders/: shader_features.h  shaders_service.cpp  shaders_service.h
src/ApplicationLayer/textures/: images_service.cpp  images_service.h  textures_service.cpp  textures_service.h  tiles_selector_service.cpp  tiles_selector_service.h  tiles_service.cpp  tiles_service.h
src/ApplicationLayer/users/: users_service.cpp  users_service.h
src/Base/: CMakeLists.txt  config.cpp  config.h  container_view.h  exception.cpp  exception.h  format.h  from.h
src/Base/config/: config_exception.h
src/BaseWidgets/: CMakeLists.txt  clicable_label.cpp  clicable_label.h  mdi_area.cpp
src/BaseWidgets/highlights/: highlighter.cpp  highlighter.h
src/BaseWidgets/layouts/: FlowLayout.cpp  FlowLayout.h
src/BaseWidgets/properties/: README.md  properties_list_widget.cpp  properties_list_widget.h
src/BaseWidgets/tabs/: base_tab_widget.cpp  base_tab_widget.h
src/CodeEditorWidget/: CMakeLists.txt  code_editor_widget.cpp  code_editor_widget.h
src/CodeEditorWidget/highlights/: highlighter.cpp  highlighter.h  highlighter_plugin_manager.cpp  highlighter_plugin_manager.h
src/Content/: CMakeLists.txt
src/Content/BaseWidgets/: CMakeLists.txt  clicable_label.cpp  mdi_area.cpp  mdi_area.h
src/Content/CharactersModule/: CMakeLists.txt
src/Content/CodeEditorWidget/: CMakeLists.txt  code_editor_widget.cpp
src/Content/DatabaseModule/: CMakeLists.txt
src/Content/InventoriesModule/: CMakeLists.txt
src/Content/InventroiesModule/: CMakeLists.txt
src/Content/MapEditor/: CMakeLists.txt  map_control_panel.cpp  map_control_panel.h  map_editor_view.cpp  map_editor_view.h  map_editor_widget.cpp  map_editor_widget.h  map_view.cpp  map_view.h
src/Content/Maps/: CMakeLists.txt
src/Content/MaterialsModule/: CMakeLists.txt
src/Content/ParticlesEditor/: CMakeLists.txt  particles_editor_view.cpp  particles_editor_view.h  particles_view.cpp  particles_view.h  particles_widget.cpp  particles_widget.h
src/Content/ShaderEditor/: CMakeLists.txt  shader_control_panel.cpp  shader_control_panel.h  shader_view.cpp  shader_view.h  shaders_editor_view.cpp  shaders_editor_view.h  shaders_editor_widget.cpp  shaders_editor_widget.h
src/Content/ShadersModule/: CMakeLists.txt
src/Content/Shared/: CMakeLists.txt  camera.cpp  camera.h
src/Content/TexturesModule/: CMakeLists.txt
src/Content/UsersModule/: CMakeLists.txt
src/DataFormat/: CMakeLists.txt
src/DataFormat/game/: entity.cpp  entity.h
src/DataFormat/proto/: equipment_slot.h  frm.h  gcd.cpp  gcd_traits.h  instruction.cpp  instruction.h  inventory_item.cpp  inventory_item.h  map.h  msg.cpp  msg.h  pal.h  particle.h  pro.cpp  pro.h  profile.h  sve.cpp
src/DataLayer/: CMakeLists.txt  data_serializer.h
src/DataLayer/characters/: character.h  character_data_provider_json_impl.cpp  character_data_provider_json_impl.h  i_character_data_provider.h
src/DataLayer/equipment/: equipment.h  equipment_data_provider.h  equipment_data_provider_json_impl.cpp  (+10 more)
src/DataStream/: CMakeLists.txt  data_stream.cpp  data_stream.h  data_write_stream.cpp  data_write_stream.h  file_reader.cpp  file_reader.h
src/Engine/: CMakeLists.txt  application.cpp  application.h  engine.cpp  engine.h  main_frame.cpp  main_frame.h
src/Fl2/: CMakeLists.txt
src/Game/: CMakeLists.txt  app_controller.cpp  app_controller.h  controllers.cpp  controllers.h  i_app_commands.h  main.cpp  main_frame.cpp  main_frame.h  mdi_child_window.cpp  mdi_child_window.h  services.cpp  services.h  windows_builder.cpp  windows_builder.h
src/Graphics/: CMakeLists.txt  camera.cpp  camera.h  graphics_resources.qrc
src/Launcher/: CMakeLists.txt  app_controller.cpp  app_controller.h  application.cpp  application.h  config.cpp  config.h  controllers.cpp  controllers.h  engine.cpp  engine.h  exception.cpp  main.cpp  main_frame.cpp  main_frame.h  mdi_child_window.cpp  resources.cpp  resources.h  services.cpp  services.h  view_state.h  windows_builder.cpp
src/Libs/: CMakeLists.txt
src/Resources/: CMakeLists.txt  resources.cpp  resources.h
src/ResourcesTool/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  README.md  mock_items_data_provider.cpp  mock_items_data_provider.h  test_items_service.cpp
tests/inventories_service/: CMakeLists.txt  test_inventories_service.cpp
tests/items_service/: CMakeLists.txt  test_items_service.cpp
(+1207 files in other folders)
