add_subdirectory(Launcher)
add_subdirectory(Base)
add_subdirectory(BaseWidgets)
add_subdirectory(CodeEditorWidget)
add_subdirectory(Graphics)
add_subdirectory(Resources)
add_subdirectory(DataStream)
add_subdirectory(DataFormat)
add_subdirectory(DataLayer)
add_subdirectory(ApplicationLayer)
add_subdirectory(Engine)

